--- a/index.html
+++ b/index.html
@@ -305,13 +305,13 @@
                                 <div class="timeline">
                                   <div class="timeline-item">
                                     <div class="timeline-info">
-                                       <span>March 12, 2016</span>
+                                       <span>7 ปี (พ.ศ. 2559 - พ.ศ. 2566)</span>
                                     </div>
                                     <div class="timeline-marker"></div>
                                     <div class="timeline-content">
                                        <h5 class="timeline-title">บริษัท อีเอ็มอาร์ ซอฟท์ จำกัด</h5>
-                                       <div>xxxxxxxxxxxxxxxxxxxxxx</div>
-                                       <div>xxxxxxxxxxxxxxxxxxxxxx</div>
+                                       <div>- ออกแบบ Phototype เพื่อนำเสนอกับ User</div>
+                                       <div>- เขียนโปรแกรมส่วน User Interface ของ Website และ  Mobile Application ด้วยภาษา HTML, CSS, Bootstrap</div>
                                     </div>
                                   </div>
                                   <div class="timeline-item">
