--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@
           <nav class="main-nav">
             <!-- ***** Logo Start ***** -->
             <a href="index.html" class="logo">
-              <img src="images/logo.png" alt="">
+              <img src="images/logo.png" alt="" class="logosize">
             </a>
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
