--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
             <!-- ***** Logo End ***** -->
             <!-- ***** Menu Start ***** -->
             <ul class="nav">
-              <li class="scroll-to-section"><a href="#top" class="active">Home</a></li>
+              <li class="scroll-to-section"><a href="#top" class="header-active active">Home</a></li>
               <li class="scroll-to-section"><a href="#about">About</a></li>
               <li class="scroll-to-section none22"><a href="#experience">Experience<span class="none"> and Education</span></a></li>
               <li class="scroll-to-section"><a href="#blog">Portfolio</a></li>
@@ -602,7 +602,7 @@
               </div>
               <div class="col-lg-5">
                 <div id="map">
-                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61979.562249734!2d100.51335024999999!3d13.8556803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29b6bae759d47%3A0xa96cffdce5a933fa!2z4LmA4LiX4Lio4Lia4Liy4Lil4LiZ4LiE4Lij4LiZ4LiZ4LiX4Lia4Li44Lij4Li1IOC4reC4s-C5gOC4oOC4reC5gOC4oeC4t-C4reC4h-C4meC4meC4l-C4muC4uOC4o-C4tSDguJnguJnguJfguJrguLjguKPguLU!5e0!3m2!1sth!2sth!4v1658306304961!5m2!1sth!2sth" width="100%" height="636px" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                  <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d61979.562249734!2d100.51335024999999!3d13.8556803!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x30e29b6bae759d47%3A0xa96cffdce5a933fa!2z4LmA4LiX4Lio4Lia4Liy4Lil4LiZ4LiE4Lij4LiZ4LiZ4LiX4Lia4Li44Lij4Li1IOC4reC4s-C5gOC4oOC4reC5gOC4oeC4t-C4reC4h-C4meC4meC4l-C4muC4uOC4o-C4tSDguJnguJnguJfguJrguLjguKPguLU!5e0!3m2!1sth!2sth!4v1658306304961!5m2!1sth!2sth" class="contact-map" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
                 </div>
               </div>
               <div class="col-lg-7">
