--- a/index.html
+++ b/index.html
@@ -429,13 +429,12 @@
               <a href="#"><img src="images/blog-post-01.jpg" alt=""></a>
             </div>
             <div class="down-content">
-              <span class="category">SEO Analysis</span>
-              <span class="date">03 August 2021</span>
-              <a href="#"><h4>Lorem Ipsum Dolor Sit Amet, Consectetur Adelore
-                Eiusmod Tempor Incididunt</h4></a>
-              <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed doers itii eiumod deis tempor incididunt ut labore.</p>
-              <span class="author"><img src="images/author-post.jpg" alt="">By: Andrea Mentuzi</span>
-              <div class="border-first-button"><a href="#">Discover More</a></div>
+              <span class="category">Portfolio Application</span>
+              <span class="date">HTML, JS, Ionic</span>
+              <a href="#"><h4>แอพพลิเคชั่น SRK Touch</h4></a>
+              <p>เป็นแอพพลิเคชั่นของโรงพยาบาลแห่งหนึ่งที่ผมได้ร่วมพัฒนา ทำหน้าที่ในการออกแบบและเขียนหน้าตา Interface ให้กับตัวแอพพลิเคชั่น โดยใช้เครื่องมือและภาษา Ionic Framework ในการพัฒนาจนสำเร็จ</p>
+              <!--<span class="author"><img src="images/xx.png" alt="">By: Saksit Chaweeplang</span>-->
+              <div class="border-first-button"><a href="#">ดูรายละเอียดเพิ่มเติม</a></div>
             </div>
           </div>
         </div>
@@ -448,9 +447,9 @@
                     <a href="#"><img src="images/blog-post-02.jpg" alt=""></a>
                   </div>
                   <div class="right-content">
-                    <span class="category">SEO Analysis</span>
-                    <span class="date">24 September 2021</span>
-                    <a href="#"><h4>Lorem Ipsum Dolor Sit Amei Eiusmod Tempor</h4></a>
+                    <span class="category">System</span>
+                    <span class="date">HTML, JS</span>
+                    <a href="#"><h4>บอร์ดคิวห้องยา</h4></a>
                     <p>Lorem ipsum dolor sit amet, cocteturi adipiscing eliterski.</p>
                   </div>
                 </div>
@@ -461,9 +460,9 @@
                     <a href="#"><img src="images/blog-post-03.jpg" alt=""></a>
                   </div>
                   <div class="right-content">
-                    <span class="category">SEO Analysis</span>
-                    <span class="date">24 September 2021</span>
-                    <a href="#"><h4>Lorem Ipsum Dolor Sit Amei Eiusmod Tempor</h4></a>
+                    <span class="category">System</span>
+                    <span class="date">คลิกรูปตัวอย่าง</span>
+                    <a href="#"><h4>ระบบลงทะเบียนผู้ป่วย</h4></a>
                     <p>Lorem ipsum dolor sit amet, cocteturi adipiscing eliterski.</p>
                   </div>
                 </div>
@@ -474,10 +473,10 @@
                     <a href="#"><img src="images/blog-post-04.jpg" alt=""></a>
                   </div>
                   <div class="right-content">
-                    <span class="category">SEO Analysis</span>
-                    <span class="date">24 September 2021</span>
-                    <a href="#"><h4>Lorem Ipsum Dolor Sit Amei Eiusmod Tempor</h4></a>
-                    <p>Lorem ipsum dolor sit amet, cocteturi adipiscing eliterski.</p>
+                    <span class="category">System</span>
+                    <span class="date">HTML, JS, Bootstrap</span>
+                    <a href="#"><h4>เว็บไซต์บริษัท</h4></a>
+                    <p>ผมได้มีโอกาสได้ออกแบบและพัฒนาเว็บไซต์บริษัทเมื่อตอนที่ผมเข้าทำงานใหม่ </p>
                   </div>
                 </div>
               </div>
