--- a/index.html
+++ b/index.html
@@ -372,17 +372,19 @@
                       <div>
                         <div class="thumb">
                           <div class="row">
-                            <div class="col-lg-6 align-self-center">
+                            <div class="col-lg-7 align-self-center">
                               <div class="left-text">
                                 <h4>งานอดิเรก (Hobbies) </h4>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt ut labore et dolore kengan darwin doerski token.
-                                  dover lipsum lorem and the others.</p>
-                                <div class="ticks-list"><span><i class="fa fa-check"></i> Optimized Template</span> <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span>
-                                  <span><i class="fa fa-check"></i> Data Info</span> <span><i class="fa fa-check"></i> SEO Analysis</span> <span><i class="fa fa-check"></i> Optimized Template</span></div>
-                                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit, sedr do eiusmod deis tempor incididunt.</p>
+                                <div class="ticks-list">
+                                    <span><i class="fa fa-check"></i> ออกแบบและเขียนเว็บไซต์</span>
+                                    <span><i class="fa fa-check"></i> หาข้อมูลเทคนิคในการออกแบบ</span>
+                                    <span><i class="fa fa-check"></i> อ่านบทความข่าวเทคโนโลยีใหม่ๆ</span>
+                                  <span><i class="fa fa-check"></i> ถ่ายภาพตามสถานที่ต่างๆ</span>
+                                </div>
+                                <p>ผมชอบติดตามข่าวเทคโนโลยีใหม่ๆ รวมทั้งบ่อยครั้งที่ติดปัญหาในการทำงานผมก็จะชอบหาคำตอบและแก้ปัญหานั้นจนสำเร็จ</p>
                               </div>
                             </div>
-                            <div class="col-lg-6 align-self-center">
+                            <div class="col-lg-5 align-self-center">
                               <div class="right-image">
                                 <img src="images/experience-image-04.jpg" alt="">
                               </div>
