--- a/index.html
+++ b/index.html
@@ -267,8 +267,8 @@
                                     <div class="timeline-marker"></div>
                                     <div class="timeline-content">
                                        <h5 class="timeline-title">มหาวิทยาลัยภาคตะวันออกเฉียงเหนือ จ.ขอนแกน</h5>
-                                       <div>xxxxxxxxxxxxxxxxxxxxxx</div>
-                                       <div>xxxxxxxxxxxxxxxxxxxxxx</div>
+                                       <div>คณะคอมพิวเตอร์และเทคโนโลยีสารสนเทศ</div>
+                                       <div>สาขา เทคโนโลยีสารสนเทศ</div>
                                     </div>
                                   </div>
                                   <div class="timeline-item">
@@ -278,8 +278,7 @@
                                     <div class="timeline-marker"></div>
                                     <div class="timeline-content">
                                        <h5 class="timeline-title">โรงเรียนคอนสวรรค์ จ.ชัยภูมิ</h5>
-                                       <div>xxxxxxxxxxxxxxxxxxxxxx</div>
-                                       <div>xxxxxxxxxxxxxxxxxxxxxx</div>
+                                       <div>แผนการเรียนวิทยาศาสตร์ – คณิตศาสตร์</div>
                                     </div>
                                   </div>
                                   <p></p>
@@ -310,9 +309,9 @@
                                     <div class="timeline-marker"></div>
                                     <div class="timeline-content">
                                        <h5 class="timeline-title">บริษัท อีเอ็มอาร์ ซอฟท์ จำกัด</h5>
-                                       <div>- ตำแต่ง Senior Interface design</div>
+                                       <div>- ตำแหน่ง Senior Interface design</div>
                                        <div>- ออกแบบ Phototype เพื่อนำเสนอกับ User</div>
-                                       <div>- เขียนโปรแกรมส่วน User Interface ของ Website และ  Mobile Application ด้วยภาษา HTML, CSS, Bootstrap</div>
+                                       <div>- เขียนโปรแกรมส่วน User Interface ของ Website และ  Mobile Application ด้วยภาษา HTML, CSS และ Javascript</div>
                                     </div>
                                   </div>
                                   <div class="timeline-item">
@@ -344,22 +343,57 @@
                       <div>
                         <div class="thumb">
                           <div class="row">
-                            <div class="col-lg-6 align-self-center">
+                            
+                            <div class="col-lg-7 align-self-center">
                               <div class="left-text">
                                 <h4>ทักษะและความสามารถพิเศษ (Skills)</h4>
-                                <p>Website & Application Interface Design จำเป็นต้องมีการเรียนรู้และปรับตัวอยู่เสมอ  
-                                  เนื่องจากงานทางด้านเทคโนโลยีมีการเติบโตอยู่ตลอดเวลา ส่งผลให้มีเทคนิคใหม่ ๆ และ Software ใหม่ ๆ เกิดขึ้นตลอดเวลา</p>
-                                <div class="ticks-list">
-                                  <span><i class="fa fa-check"></i> HTML/CSS skills</span>
-                                  <span><i class="fa fa-check"></i> JavaScript skills</span> 
-                                  <span><i class="fa fa-check"></i> Analytical skills</span>
-                                  <span><i class="fa fa-check"></i> Responsive design skills</span> 
-                                  <span><i class="fa fa-check"></i> Search engine optimization (SEO)</span> 
-                                  <span><i class="fa fa-check"></i> Interpersonal skills</span>
+                                <div class="timeline">
+                                  <div class="timeline-item">
+                                    <div class="timeline-content">
+                                      <div style="height: 10px"></div> 
+                                      <h5 class="timeline-title">HTML</h5>
+                                       <div>ระดับดีมาก</div>
+                                       <div style="height: 10px"></div>
+                                    </div>
+                                  </div>
+                                  <div class="timeline-item">
+                                    <div class="timeline-content">
+                                       <h5 class="timeline-title">CSS</h5>
+                                       <div>ระดับดีมาก</div>
+                                       <div style="height: 10px"></div>
+                                    </div>
+                                  </div>
+                                  <div class="timeline-item">
+                                    <div class="timeline-content">
+                                       <h5 class="timeline-title">Bootstrap</h5>
+                                       <div>ระดับดีมาก</div>
+                                       <div style="height: 10px"></div>
+                                    </div>
+                                  </div>
+                                  <div class="timeline-item">
+                                    <div class="timeline-content">
+                                       <h5 class="timeline-title">JavaScript</h5>
+                                       <div>ระดับดี</div>
+                                       <div style="height: 10px"></div>
+                                    </div>
+                                  </div>
+                                  <div class="timeline-item">
+                                    <div class="timeline-content">
+                                       <h5 class="timeline-title">jQuery</h5>
+                                       <div>ระดับพอใช้</div>
+                                       <div style="height: 10px"></div>
+                                    </div>
+                                  </div>
+                                  <div class="timeline-item">
+                                    <div class="timeline-content">
+                                       <h5 class="timeline-title">MySQL</h5>
+                                       <div>ระดับพอใช้</div>
+                                    </div>
+                                  </div>
                                 </div>
                               </div>
                             </div>
-                            <div class="col-lg-6 align-self-center">
+                            <div class="col-lg-5 align-self-center">
                               <div class="right-image">
                                 <img src="images/experience-skills.png" alt="">
                               </div>
