--- a/index.html
+++ b/index.html
@@ -343,56 +343,78 @@
                       <div>
                         <div class="thumb">
                           <div class="row">
-                            
-                            <div class="col-lg-7 align-self-center">
+                            <div class="col-lg-6 align-self-center">
                               <div class="left-text">
                                 <h4>ทักษะและความสามารถพิเศษ (Skills)</h4>
-                                <div class="timeline">
-                                  <div class="timeline-item">
-                                    <div class="timeline-content">
-                                      <div style="height: 10px"></div> 
+                                <div class="skills">
+                                  <div class="row">
+                                    <div class="col-md-6">
                                       <h5 class="timeline-title">HTML</h5>
-                                       <div>ระดับดีมาก</div>
-                                       <div style="height: 10px"></div>
+                                    </div>
+                                    <div class="col-md-6">
+                                      <div class="level">ระดับดีมาก</div>
                                     </div>
                                   </div>
-                                  <div class="timeline-item">
-                                    <div class="timeline-content">
-                                       <h5 class="timeline-title">CSS</h5>
-                                       <div>ระดับดีมาก</div>
-                                       <div style="height: 10px"></div>
+                                  <div>xxx11111</div>
+                                </div>
+                                <div class="skills">
+                                  <div class="row">
+                                    <div class="col-md-6">
+                                      <h5 class="timeline-title">CSS</h5>
+                                    </div>
+                                    <div class="col-md-6">
+                                      <div class="level">ระดับดีมาก</div>
                                     </div>
                                   </div>
-                                  <div class="timeline-item">
-                                    <div class="timeline-content">
-                                       <h5 class="timeline-title">Bootstrap</h5>
-                                       <div>ระดับดีมาก</div>
-                                       <div style="height: 10px"></div>
+                                  <div>xxx</div>
+                                </div>
+                                <div class="skills">
+                                  <div class="row">
+                                    <div class="col-md-6">
+                                      <h5 class="timeline-title">Bootstrap</h5>
+                                    </div>
+                                    <div class="col-md-6">
+                                      <div class="level">ระดับดีมาก</div>
                                     </div>
                                   </div>
-                                  <div class="timeline-item">
-                                    <div class="timeline-content">
-                                       <h5 class="timeline-title">JavaScript</h5>
-                                       <div>ระดับดี</div>
-                                       <div style="height: 10px"></div>
+                                  <div>xxx</div>
+                                </div>
+                                <div class="skills">
+                                  <div class="row">
+                                    <div class="col-md-6">
+                                      <h5 class="timeline-title">JavaScript</h5>
+                                    </div>
+                                    <div class="col-md-6">
+                                      <div class="level">ระดับดี</div>
                                     </div>
                                   </div>
-                                  <div class="timeline-item">
-                                    <div class="timeline-content">
-                                       <h5 class="timeline-title">jQuery</h5>
-                                       <div>ระดับพอใช้</div>
-                                       <div style="height: 10px"></div>
+                                  <div>xxx</div>
+                                </div>
+                                <div class="skills">
+                                  <div class="row">
+                                    <div class="col-md-6">
+                                      <h5 class="timeline-title">jQuery</h5>
+                                    </div>
+                                    <div class="col-md-6">
+                                      <div class="level">ระดับพอใช้</div>
                                     </div>
                                   </div>
-                                  <div class="timeline-item">
-                                    <div class="timeline-content">
-                                       <h5 class="timeline-title">MySQL</h5>
-                                       <div>ระดับพอใช้</div>
+                                  <div>xxx</div>
+                                </div>
+                                <div class="skills">
+                                  <div class="row">
+                                    <div class="col-md-6">
+                                      <h5 class="timeline-title">MySQL</h5>
+                                    </div>
+                                    <div class="col-md-6">
+                                      <div class="level">ระดับพอใช้</div>
                                     </div>
                                   </div>
+                                  <div>xxx</div>
                                 </div>
                               </div>
                             </div>
+                            <div class="col-lg-1 align-self-center"></div>
                             <div class="col-lg-5 align-self-center">
                               <div class="right-image">
                                 <img src="images/experience-skills.png" alt="">
