--- a/index.html
+++ b/index.html
@@ -456,7 +456,6 @@
           </div>
         </div>
       </div>
-      
     </div>
     <div class="flourish">
       <div class="flourish-post parallax100">
@@ -470,8 +469,6 @@
     </div>
   </div>
 
-  
-
   <div id="portfolio" class="portfolio">
     <div class="col-lg-8 offset-lg-2  wow fadeInDown" data-wow-duration="1s" data-wow-delay="0.3s">
       <div class="section-heading">
@@ -480,7 +477,6 @@
         <div class="line-dec"></div>
       </div>
     </div>
-    
     <div class="container">
       <div class="row">
         <div class="col-lg-6 show-up wow fadeInUp" data-wow-duration="1s" data-wow-delay="0.3s">
@@ -491,7 +487,7 @@
             <div class="down-content">
               <span class="category">Portfolio Application</span>
               <span class="date"></span>
-              <a href="#"><h4>แอพพลิเคชั่น SRK Touch</h4></a>
+              <h4>แอพพลิเคชั่น SRK Touch</h4>
               <p>เป็นแอพพลิเคชั่นของโรงพยาบาลแห่งหนึ่งที่ผมได้ร่วมพัฒนา ทำหน้าที่ในการออกแบบและเขียนหน้าตา Interface ให้กับตัวแอพพลิเคชั่น โดยใช้เครื่องมือและภาษา Ionic Framework ในการพัฒนาจนสำเร็จ</p>
               <!--<span class="author"><img src="images/xx.png" alt="">By: Saksit Chaweeplang</span>-->
               <div class="border-first-button"><a href="#">ดูรายละเอียดเพิ่มเติม</a></div>
@@ -522,7 +518,7 @@
                   <div class="right-content">
                     <span class="category">System</span>
                     <span class="date"></span>
-                    <a href="#"><h4>ระบบลงทะเบียนผู้ป่วย</h4></a>
+                    <h4>ระบบลงทะเบียนผู้ป่วย</h4>
                     <p>Lorem ipsum dolor sit amet, cocteturi adipiscing eliterski.</p>
                   </div>
                 </div>
@@ -535,7 +531,7 @@
                   <div class="right-content">
                     <span class="category">System</span>
                     <span class="date"></span>
-                    <a href="#"><h4>เว็บไซต์บริษัท</h4></a>
+                    <h4>เว็บไซต์บริษัท</h4>
                     <p>ผมได้มีโอกาสได้ออกแบบและพัฒนาเว็บไซต์บริษัทเมื่อตอนที่ผมเข้าทำงานใหม่ </p>
                   </div>
                 </div>
