--- a/index.html
+++ b/index.html
@@ -256,7 +256,7 @@
                       <div>
                         <div class="thumb">
                           <div class="row">
-                            <div class="col-lg-7 align-self-center">
+                            <div class="col-lg-6 align-self-center">
                               <div class="left-text">
                                 <h4>ประวัติการศึกษา (Education)</h4>
                                 <div class="timeline">
@@ -285,7 +285,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="col-lg-5 align-self-center">
+                            <div class="col-lg-6 align-self-center">
                               <div class="right-image">
                                 <img src="images/experience-education.png" alt="">
                               </div>
@@ -298,7 +298,7 @@
                       <div>
                         <div class="thumb">
                           <div class="row">
-                            <div class="col-lg-7 align-self-center">
+                            <div class="col-lg-6 align-self-center">
                               <div class="left-text">
                                 <h4>ประสบการณ์การทำงาน (Work experience)</h4>
                                 <div class="timeline">
@@ -329,10 +329,9 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="col-lg-1 align-self-center"></div>
-                            <div class="col-lg-4 align-self-center">
+                            <div class="col-lg-6 align-self-center">
                               <div class="right-image">
-                                <img src="images/experience-image-02.jpg" alt="">
+                                <img src="images/experience-work.png" alt="">
                               </div>
                             </div>
                           </div>
@@ -414,8 +413,7 @@
                                 </div>
                               </div>
                             </div>
-                            <div class="col-lg-1 align-self-center"></div>
-                            <div class="col-lg-5 align-self-center">
+                            <div class="col-lg-6 align-self-center">
                               <div class="right-image">
                                 <img src="images/experience-skills.png" alt="">
                               </div>
@@ -490,7 +488,7 @@
               <h4>แอพพลิเคชั่น SRK Touch</h4>
               <p>เป็นแอพพลิเคชั่นของโรงพยาบาลแห่งหนึ่งที่ผมได้ร่วมพัฒนา ทำหน้าที่ในการออกแบบและเขียนหน้าตา Interface ให้กับตัวแอพพลิเคชั่น โดยใช้เครื่องมือและภาษา Ionic Framework ในการพัฒนาจนสำเร็จ</p>
               <!--<span class="author"><img src="images/xx.png" alt="">By: Saksit Chaweeplang</span>-->
-              <div class="border-first-button"><a href="#">ดูรายละเอียดเพิ่มเติม</a></div>
+              <!--<div class="border-first-button"><a href="#">ดูรายละเอียดเพิ่มเติม</a></div>-->
             </div>
           </div>
         </div>
@@ -503,10 +501,10 @@
                     <a href="#"><img src="images/blog-post-02.jpg" alt=""  style="width: 230px"></a>
                   </div>
                   <div class="right-content">
-                    <span class="category">System</span>
+                    <span class="category">Portfolio System</span>
                     <span class="date"></span>
                     <h4>บอร์ดคิวห้องยา</h4>
-                    <p>Lorem ipsum dolor sit amet, cocteturi adipiscing eliterski.</p>
+                    <p>เจ้าหน้าที่สามารถเเรียกคิวผู้ป่วยจากระบบหลัก โดยที่คิวที่ถูกเรียกจะแสดงบนบอร์ดและมีเสียงเรียก</p>
                   </div>
                 </div>
               </div>
@@ -516,10 +514,10 @@
                     <a href="#"><img src="images/blog-post-03.jpg" alt=""  style="width: 230px"></a>
                   </div>
                   <div class="right-content">
-                    <span class="category">System</span>
+                    <span class="category">Portfolio System</span>
                     <span class="date"></span>
                     <h4>ระบบลงทะเบียนผู้ป่วย</h4>
-                    <p>Lorem ipsum dolor sit amet, cocteturi adipiscing eliterski.</p>
+                    <p>ผู้ป่วยสามารถลงทะเบียนด้วยตนเองผ่านตู้ Kiosk แล้วรอรับบริการตามคลินิกที่ต้องการได้เลย</p>
                   </div>
                 </div>
               </div>
@@ -529,7 +527,7 @@
                     <a href="#"><img src="images/blog-post-04.jpg" alt=""  style="width: 230px"></a>
                   </div>
                   <div class="right-content">
-                    <span class="category">System</span>
+                    <span class="category">Portfolio System</span>
                     <span class="date"></span>
                     <h4>เว็บไซต์บริษัท</h4>
                     <p>ผมได้มีโอกาสได้ออกแบบและพัฒนาเว็บไซต์บริษัทเมื่อตอนที่ผมเข้าทำงานใหม่ </p>
@@ -548,7 +546,8 @@
       <div class="row">
         <div class="col-lg-6">
           <div class="section-heading wow fadeInLeft" data-wow-duration="1s" data-wow-delay="0.3s">
-            <h4>My <em>Picture</em></h4>
+            <h6>My Picture</h6>
+            <h4>รูปตัวอย่าง<em>ผลงาน</em></h4>
             <p>ภาพที่นำมาเสนอบาง Projects จะพัฒนาร่วมกับทีม Programmer โดยที่ผมจะทำหน้าที่ในการออกแบบ User Interface ตามความต้องการของผู้ใช้งาน หรือ Requirement ที่ได้รับมอบหมายนะครับ</p>
           </div>
         </div>
