--- a/index.html
+++ b/index.html
@@ -346,71 +346,45 @@
                               <div class="left-text">
                                 <h4>ทักษะและความสามารถพิเศษ (Skills)</h4>
                                 <div class="skills">
-                                  <div class="row">
-                                    <div class="col-md-6">
-                                      <h5 class="timeline-title">HTML</h5>
-                                    </div>
-                                    <div class="col-md-6">
-                                      <div class="level">ระดับดีมาก</div>
-                                    </div>
+                                  <h5>HTML</h5>
+                                  <div class="level">
+                                    <p>90% &nbsp; ระดับดีมาก</p>
                                   </div>
-                                  <div>xxx11111</div>
                                 </div>
                                 <div class="skills">
-                                  <div class="row">
-                                    <div class="col-md-6">
-                                      <h5 class="timeline-title">CSS</h5>
-                                    </div>
-                                    <div class="col-md-6">
-                                      <div class="level">ระดับดีมาก</div>
-                                    </div>
+                                  <h5>CSS</h5>
+                                  <div class="level">
+                                    <p>100% &nbsp; ระดับดีมาก</p>
                                   </div>
-                                  <div>xxx</div>
                                 </div>
                                 <div class="skills">
-                                  <div class="row">
-                                    <div class="col-md-6">
-                                      <h5 class="timeline-title">Bootstrap</h5>
-                                    </div>
-                                    <div class="col-md-6">
-                                      <div class="level">ระดับดีมาก</div>
-                                    </div>
+                                  <h5>Bootstrap</h5>
+                                  <div class="level">
+                                    <p>100% &nbsp; ระดับดีมาก</p>
                                   </div>
-                                  <div>xxx</div>
                                 </div>
                                 <div class="skills">
-                                  <div class="row">
-                                    <div class="col-md-6">
-                                      <h5 class="timeline-title">JavaScript</h5>
-                                    </div>
-                                    <div class="col-md-6">
-                                      <div class="level">ระดับดี</div>
-                                    </div>
+                                  <h5>JavaScript</h5>
+                                  <div class="level" style="width: 75%;">
+                                    <p>75%</p>
                                   </div>
-                                  <div>xxx</div>
+                                  <p>ระดับดี</p>
                                 </div>
                                 <div class="skills">
-                                  <div class="row">
-                                    <div class="col-md-6">
-                                      <h5 class="timeline-title">jQuery</h5>
-                                    </div>
-                                    <div class="col-md-6">
-                                      <div class="level">ระดับพอใช้</div>
-                                    </div>
+                                  <h5>jQuery</h5>
+                                  <div class="level" style="width: 50%;">
+                                    <p>50%</p>
                                   </div>
-                                  <div>xxx</div>
+                                  <p>ระดับพอใช้</p>
                                 </div>
                                 <div class="skills">
-                                  <div class="row">
-                                    <div class="col-md-6">
-                                      <h5 class="timeline-title">MySQL</h5>
-                                    </div>
-                                    <div class="col-md-6">
-                                      <div class="level">ระดับพอใช้</div>
-                                    </div>
+                                  <h5>MySQL</h5>
+                                  <div class="level" style="width: 50%;">
+                                    <p>50%</p>
                                   </div>
-                                  <div>xxx</div>
+                                  <p>ระดับพอใช้</p>
                                 </div>
+                                <p></p>
                               </div>
                             </div>
                             <div class="col-lg-6 align-self-center">
@@ -426,7 +400,7 @@
                       <div>
                         <div class="thumb">
                           <div class="row">
-                            <div class="col-lg-7 align-self-center">
+                            <div class="col-lg-6 align-self-center">
                               <div class="left-text">
                                 <h4>งานอดิเรก (Hobbies) </h4>
                                 <div class="ticks-list">
@@ -438,9 +412,9 @@
                                 <p>ผมชอบติดตามข่าวเทคโนโลยีใหม่ๆ รวมทั้งบ่อยครั้งที่ติดปัญหาในการทำงานผมก็จะชอบหาคำตอบและแก้ปัญหานั้นจนสำเร็จ</p>
                               </div>
                             </div>
-                            <div class="col-lg-5 align-self-center">
+                            <div class="col-lg-6 align-self-center">
                               <div class="right-image">
-                                <img src="images/experience-image-04.jpg" alt="">
+                                <img src="images/experience-hobbies.png" alt="">
                               </div>
                             </div>
                           </div>
