--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                   <div class="col-lg-12">
                     <h6>My Portfolio</h6>
                     <h2>Saksit Chaweeplang</h2>
-                    <p>สวัสดีครับ ผมชื่อศักดิ์สิทธิ์ ฉวีแปลง (นัท) จบจากสาขาวิชาเทคโนยีสารสนเทศ เว็บไซต์นี้ผมเขียนขึ้นเพื่อแนะนำตัวเกี่ยวกับประวัติการศึกษา และประสบการณ์การทำงาน รวมถึงนำเสนอผลงาน ความรู้ความสามารถในการออกแบบด้าน UX/UI นะครับ</p>
+                    <p>สวัสดีครับ ผมชื่อศักดิ์สิทธิ์ ฉวีแปลง (นัท) จบสาขาวิชาเทคโนโลยีสารสนเทศ เว็บไซต์นี้ผมเขียนขึ้นเพื่อแนะนำตัวเกี่ยวกับประวัติการศึกษา ประสบการณ์การทำงาน รวมถึงนำเสนอผลงาน ความรู้ความสามารถในการออกแบบและพัฒนา Web Application</p>
                   </div>
                   <div class="col-lg-12">
                     <div class="border-first-button scroll-to-section">
@@ -262,23 +262,23 @@
                                 <div class="timeline">
                                   <div class="timeline-item">
                                     <div class="timeline-info">
-                                       <span>March 12, 2016</span>
+                                       <span>พ.ศ. 2558</span>
                                     </div>
                                     <div class="timeline-marker"></div>
                                     <div class="timeline-content">
                                        <h5 class="timeline-title">มหาวิทยาลัยภาคตะวันออกเฉียงเหนือ จ.ขอนแกน</h5>
-                                       <div>คณะคอมพิวเตอร์และเทคโนโลยีสารสนเทศ</div>
+                                       <div>ปริญญาตรี คณะคอมพิวเตอร์และเทคโนโลยีสารสนเทศ</div>
                                        <div>สาขา เทคโนโลยีสารสนเทศ</div>
                                     </div>
                                   </div>
                                   <div class="timeline-item">
                                     <div class="timeline-info">
-                                       <span>March 12, 2016</span>
+                                       <span>พ.ศ. 2554</span>
                                     </div>
                                     <div class="timeline-marker"></div>
                                     <div class="timeline-content">
                                        <h5 class="timeline-title">โรงเรียนคอนสวรรค์ จ.ชัยภูมิ</h5>
-                                       <div>แผนการเรียนวิทยาศาสตร์ – คณิตศาสตร์</div>
+                                       <div>มัธยมศึกษาแผนการเรียนวิทยาศาสตร์ – คณิตศาสตร์</div>
                                     </div>
                                   </div>
                                   <p></p>
@@ -348,7 +348,7 @@
                                 <div class="skills">
                                   <h5>HTML</h5>
                                   <div class="level">
-                                    <p>90% &nbsp; ระดับดีมาก</p>
+                                    <p>100% &nbsp; ระดับดีมาก</p>
                                   </div>
                                 </div>
                                 <div class="skills">
@@ -404,10 +404,10 @@
                               <div class="left-text">
                                 <h4>งานอดิเรก (Hobbies) </h4>
                                 <div class="ticks-list">
-                                    <span><i class="fa fa-check"></i> ออกแบบและเขียนเว็บไซต์</span>
-                                    <span><i class="fa fa-check"></i> หาข้อมูลเทคนิคในการออกแบบ</span>
-                                    <span><i class="fa fa-check"></i> อ่านบทความข่าวเทคโนโลยีใหม่ๆ</span>
-                                  <span><i class="fa fa-check"></i> ถ่ายภาพตามสถานที่ต่างๆ</span>
+                                    <span><i class="fa fa-file-code-o"></i> ออกแบบและเขียนเว็บไซต์</span>
+                                    <span><i class="fa fa-newspaper-o"></i> หาข้อมูลเทคนิคในการออกแบบ</span>
+                                    <span><i class="fa fa-desktop"></i> อ่านบทความข่าวเทคโนโลยีใหม่ๆ</span>
+                                  <span><i class="fa fa-file-image-o"></i> ถ่ายภาพตามสถานที่ต่างๆ</span>
                                 </div>
                                 <p>ผมชอบติดตามข่าวเทคโนโลยีใหม่ๆ รวมทั้งบ่อยครั้งที่ติดปัญหาในการทำงานผมก็จะชอบหาคำตอบและแก้ปัญหานั้นจนสำเร็จ</p>
                               </div>
