--- a/index.html
+++ b/index.html
@@ -711,9 +711,13 @@
   <script src="js/imagesloaded.js"></script>
   <script src="js/custom.js"></script>
   <script src="js/parallax100.js"></script>
-	<script type="text/javascript">
+	<script>
     $('.parallax100').parallax100();
 	</script>
+  	<script>
+      consolt.log("Saksit")
+  
+    </script>
 
 </body>
 </html>
