--- a/index.html
+++ b/index.html
@@ -338,42 +338,51 @@
                         <div class="row">
                           <div class="col-lg-6 align-self-center">
                             <div class="left-text">
-                              <h4>ทักษะและความสามารถพิเศษ (Skills)</h4>
+                              <h4>ทักษะและความสามารถ (Skills)</h4>
                               <div class="skills">
-                                <h5>HTML</h5>
-                                <div class="level" style="width: 95%;">
-                                  <p>95%</p>
+                                <div class="box">
+                                  <h5>HTML</h5>
+                                  <div class="level" style="width: 95%;">
+                                    <p>95%</p>
+                                  </div>
                                 </div>
+                                <div class="text">สามารถเขียน HTML ในระดับดีมาก เช่นสร้าง Layout และจัดแบบฟอร์มเอกสาร </div>
                               </div>
                               <div class="skills">
-                                <h5>CSS</h5>
-                                <div class="level" style="width: 90%;">
-                                  <p>90%</p>
+                                <div class="box">
+                                  <h5>CSS</h5>
+                                  <div class="level" style="width: 90%;">
+                                    <p>90%</p>
+                                  </div>
                                 </div>
+                                <div class="text">สามารถเขียน CSS เพื่อให้ระบบหรือเว็บไซต์ออกมาสวยงามได้ในระดับดีมาก</div>
                               </div>
                               <div class="skills">
-                                <h5>Bootstrap</h5>
-                                <div class="level" style="width: 90%;">
-                                  <p>90%</p>
+                                <div class="box">
+                                  <h5>JavaScript</h5>
+                                  <div class="level" style="width: 70%;">
+                                    <p>75%</p>
+                                  </div>
                                 </div>
+                                <div class="text">ทักษะ JavaScript ในระดับดี สามารถเขียน function และปรับแก้โค้ดทั่วไปได้</div>
                               </div>
                               <div class="skills">
-                                <h5>JavaScript</h5>
-                                <div class="level" style="width: 70%;">
-                                  <p>75%</p>
+                                <div class="box">
+                                  <h5>jQuery</h5>
+                                  <div class="level" style="width: 50%;">
+                                    <p>50%</p>
+                                  </div>
                                 </div>
+                                <div class="text">ทักษะ jQuery ในระดับพื้นฐาน สามารถเขียน function และปรับแก้โค้ดเบื้องต้นได้</div>
                               </div>
                               <div class="skills">
-                                <h5>jQuery</h5>
-                                <div class="level" style="width: 50%;">
-                                  <p>50%</p>
+                                <div class="box">
+                                  <h5>SQL</h5>
+                                  <div class="level" style="width: 50%;">
+                                    <p>50%</p>
+                                  </div>
                                 </div>
-                              </div>
-                              <div class="skills">
-                                <h5>MySQL</h5>
-                                <div class="level" style="width: 50%;">
-                                  <p>50%</p>
-                                </div>
+                                <div class="text">ทักษะ SQL ในระดับพื้นฐาน สามารถ select และ join ข้อมูลเบื้องต้นได้</div>
                               </div>
                             </div>
                           </div>
@@ -393,7 +402,7 @@
                               <h4>งานอดิเรก (Hobbies) </h4>
                               <div class="ticks-list">
                                   <span><i class="fa fa-file-code-o" style="width: 22px"></i> ออกแบบและเขียนเว็บไซต์</span>
-                                  <span><i class="fa fa-newspaper-o" style="width: 22px"></i> หาข้อมูลเทคนิคในการออกแบบ</span>
+                                  <span><i class="fa fa-newspaper-o" style="width: 22px"></i> ศึกษาเทคนิคการเขียนโค้ดและการออกแบบ</span>
                                   <span><i class="fa fa-desktop" style="width: 22px"></i> อ่านบทความข่าวเทคโนโลยีใหม่ๆ</span>
                                 <span><i class="fa fa-file-image-o" style="width: 22px"></i> ถ่ายภาพตามสถานที่ต่างๆ</span>
                               </div>
