--- a/index.html
+++ b/index.html
@@ -346,7 +346,7 @@
                                     <p>95%</p>
                                   </div>
                                 </div>
-                                <div class="text">สามารถเขียน HTML ในระดับดีมาก เช่นสร้าง Layout และจัดแบบฟอร์มเอกสาร </div>
+                                <div class="text">ทักษะ HTML ในระดับดีมาก เช่น สร้าง Layout และจัดแบบฟอร์มเอกสารด้วยภาษา HTML</div>
                               </div>
                               <div class="skills">
                                 <div class="box">
@@ -355,7 +355,7 @@
                                     <p>90%</p>
                                   </div>
                                 </div>
-                                <div class="text">สามารถเขียน CSS เพื่อให้ระบบหรือเว็บไซต์ออกมาสวยงามได้ในระดับดีมาก</div>
+                                <div class="text">ทักษะ CSS ในระดับดีมาก เช่น ปรับแต่ง Design ระบบหรือเว็บไซต์ให้สวยงามและน่าใช้</div>
                               </div>
                               <div class="skills">
                                 <div class="box">
@@ -543,10 +543,23 @@
               <a href="#">
                 <div class="picture-item">
                 <div class="thumb">
-                  <img src="images/picture-01.jpg" alt="">
+                  <img src="images/blog-post-02.jpg" alt="">
                 </div>
                 <div class="down-content">
-                  <h4>ระบบ XXXXXXXX1</h4>
+                  <h4>บอร์ดคิวห้องยา</h4>
+                  <span>รพ.สมเด็จพระนางเจ้าสิริกิติ์</span>
+                </div>
+              </div>
+              </a>  
+            </div>
+            <div class="item">
+              <a href="#">
+                <div class="picture-item">
+                <div class="thumb">
+                  <img src="images/blog-post-03.jpg" alt="">
+                </div>
+                <div class="down-content">
+                  <h4>ระบบลงทะเบียนผู้ป่วย</h4>
                   <span>เขียนอะไรลงไปดีวะ</span>
                 </div>
               </div>
@@ -556,23 +569,10 @@
               <a href="#">
                 <div class="picture-item">
                 <div class="thumb">
-                  <img src="images/picture-01.jpg" alt="">
+                  <img src="images/blog-post-04.jpg" alt="">
                 </div>
                 <div class="down-content">
-                  <h4>ระบบ XXXXXXXX2</h4>
-                  <span>เขียนอะไรลงไปดีวะ</span>
-                </div>
-              </div>
-              </a>  
-            </div>
-            <div class="item">
-              <a href="#">
-                <div class="picture-item">
-                <div class="thumb">
-                  <img src="images/picture-02.jpg" alt="">
-                </div>
-                <div class="down-content">
-                  <h4>ระบบ XXXXXXXX3</h4>
+                  <h4>เว็บไซต์บริษัท</h4>
                   <span>เขียนอะไรลงไปดีวะ</span>
                 </div>
               </div>
